[project]
name = "phase1-tudolist"
version = "0.1.0"
description = "Phase 1: In-Memory Python Console Todo Application - Evolution of Todo Hackathon"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
todo = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
